codegen/ui_tests/rhai_mod_unknown_type.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error[E0412]: cannot find type `Pointer` in this scope
  --> ui_tests/rhai_mod_unknown_type.rs:12:27
   |
4  | pub struct Point {
   | ---------------- similarly named struct `Point` defined here
...
12 |     pub fn test_fn(input: Pointer) -> bool {
   |                           ^^^^^^^
   |
help: a struct with a similar name exists
   |
12 |     pub fn test_fn(input: Point) -> bool {
   |                           ~~~~~
help: consider importing one of these items
   |
11 |     use std::fmt::Pointer;
   |
11 |     use syn::__private::fmt::Pointer;
   |
11 |     use core::fmt::Pointer;
   |
